
    API / Behaviour Changes:
        - None.

    New Features:
        - None.

    Enhancements:
        - Use Text::Table::Tiny for xdump() output if it is installed
        - Support VALUES (1,2),(3,4) syntax in WITH statements

    Bug Fixes:
        - None.

    Dependencies:
        - None.

    Packaging:
        - Automatically generate README file using githook-perltidy

0.0.48 (2016-11-01)

    New Features:
        - New xprepare_cached() method that maps to the underlying
          DBI prepare_cached one.

0.0.46 (2016-10-16)

    No changes from v0.0.45_2.

0.0.45_2 (2016-07-29)

    Bug Fixes:
        - Remove debugging print statement

0.0.45_1 (2016-07-28)

    Enhancements:
        - Indent JOIN and ON statements by two spaces.
        - Log SQL statements when the prepare() step fails

    Bug Fixes:
        - Remove support for empty { col => [] } constructs

    Dependencies:
        - Don't use "//" for perl 5.6 support

0.0.44 (2016-05-20)

    Bug Fixes:
        - Don't index new non-public packages
        - Fix Deploy under App::staticperl builds

0.0.42 (2016-02-29)

    New Features:
        - New throw_error() method for overriding database errors

    Enhancements:
        - Ignore { col => [] } constructs

    Bug Fixes:
        - Only test with DBD::SQLite as DBD::DBM is fragile

0.0.41_1 (2015-12-28)

    Enhancements:
        - Major refactoring

0.0.40 (2015-06-26)

    Enhancements:
        - Support use of >, >=, < and <= in WHERE/ON conditions.

0.0.38 (2015-06-24)

    Bug Fixes:
        - NULL conditions in WHERE statements would cause any following
          values to also be NULL.

0.0.36 (2015-06-19)

    Enhancements:
        - Upgrade included Module::Install to 1.16

0.0.34 (2015-06-16)

    New Features:
        - New "log_warn" method for "warn"ing output of statements.
          This will be used by DBIx::ThinSQL::SQLite.

    Enhancements:
        - Move driver modules into seperate files (thanks to reneeb via