@@ -18,6 +18,7 @@
 
     Packaging:
         - Automatically generate README file using githook-perltidy
+        - Migrate from Module::Install to ExtUtils::MakeMaker
 
 0.0.48 (2016-11-01)
 
